<resources>
    <string name="app_name">splash_screen</string>
    <string name="action_settings">Settings</string>
    <string name="educational_ninstitutions">Educational \nInstitutions</string>
    <string name="places_of_nworship">Places Of \nWorship</string>
    <string name="bus_stop_taxi_stand_petrol_pump">Bus stop,Taxi Stand,Petrol pump</string>
    <string name="guest_house_hotels_restaurants">Guest house/Hotels/Restaurants</string>
    <string name="government_offices">Government Offices</string>
    <string name="beat_officer_details">Beat Officer Details</string>
    <string name="beat_area">Beat Area</string>
    <string name="phone_no">Phone No.</string>
    <string name="name_and_phone_number_of_beat_officer_s">NAME AND PHONE NUMBER OF BEAT OFFICER\'S</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="officer_incharge">Officer Incharge</string>
    <string name="enter">Enter</string>
    <string name="particulars_of_schools_colleges_and_hostels">Particulars of Schools, Colleges and Hostels</string>
    <string name="name_of_the_institution">Name of the Institution</string>
    <string name="name_of_head_master_principal">Name of Head Master/Principal</string>
    <string name="phone_number_of_head_master_principal">Phone Number of Head Master/Principal</string>
    <string name="name_of_office">Name of Office</string>


    <string-array name="des">
        <item>Click to select Designation</item>
        <item>BEAT OFFICER</item>
        <item>POLICE INSPECTOR</item>
        <item>SUB-DIVISIONAL POLICE OFFICER</item>
        <item>SUPERINTENDENT OF POLICE</item>
    </string-array>

    <string-array name="inst">
        <item>Click to select type of institution</item>
        <item>SCHOOL</item>
        <item>COLLEGE</item>
        <item>HOSTEL</item>
    </string-array>

    <string-array name="choosing">
        <item>Click to select type</item>
        <item>Boys</item>
        <item>Girls</item>
        <item>Both</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="people_useful_for_negotiation_kidnapping_hijacking">People useful for negotiation - kidnapping/Hijacking</string>
    <string name="list_of_bad_characters">List of Bad characters</string>
    <string name="shop_under_exercise_law_explosives">Shop under exercise law, explosives</string>
    <string name="list_of_firs_registered">List of FIRs Registered</string>
    <string name="list_of_criminals">List of Criminals</string>
    <string name="tourist_guides">Tourist Guides</string>
    <string name="list_of_dancing_schools">List of Dancing schools</string>
    <string name="important_restaurants">Important Restaurants</string>
    <string name="scrap_yard_in_the_beat_date_of_checking">Scrap yard in the Beat, Date of checking</string>
    <string name="location_of_cctv_cameras">Location of CCTV Cameras</string>
    <string name="village_panchayat_municipality_list_of_spa_hair_cutting_saloon">Village panchayat, Municipality, List of spa, Hair cutting saloon</string>
    <string name="house_panchayat_school_bank_visit">House, panchayat, school, bank visit</string>
    <string name="closed_houses_in_the_beat">Closed houses in the Beat</string>
    <string name="gadas_and_movable_carts">Gadas and movable Carts</string>
    <string name="Place" />
    <string name="place">Place</string>
    <string name="disposal">Disposal</string>
    <string name="welcome_to_goa_police_e_beat_app">Welcome to Goa Police E - Beat App</string>
    <string name="please_enter_the_details_to_login">Please enter the details to login</string>
    <string name="login">Login</string>
    <string name="welcome_to_goa_police_e_beat_app1">Welcome to Goa Police E - Beat App</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="address">address</string>
    <string name="address1">Address</string>
    <string name="fir_details">FIR Details</string>
    <string name="name_of_the_criminal">Name of the criminal</string>
    <string name="list_of_criminals_having_two_or_more_involvement_of_crime">List of Criminals having two or more involvement of Crime</string>
</resources>