<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:textAlignment="center"
    tools:context=".details">

    <LinearLayout
        android:id="@+id/detaillayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_on_primary"
        android:orientation="vertical"
        android:padding="20dp"
        android:textAlignment="center"
        tools:context=".login">

        <TextView
            android:id="@+id/welcome1"
            android:layout_width="239dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/name_and_phone_number_of_beat_officer_s"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner1"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="331dp"
            android:layout_height="57dp"
            android:background="@drawable/textview_border" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/username1text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username1text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:textColor="@color/textcolor" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--    <AutoCompleteTextView-->
        <!--        android:id="@+id/designation12"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:inputType="none"-->
        <!--        android:text="Designation"/>-->

        <!--    <com.google.android.material.textfield.TextInputLayout-->
        <!--        android:id="@id/designationtext"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="60dp">-->

        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:id="@+id/designationtext"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:hint="Designation"-->
        <!--        android:textColor="@color/black"-->
        <!--        android:visibility="visible"-->
        <!--        app:hintEnabled="true"-->
        <!--        app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"-->
        <!--        app:hintTextColor="@color/black"-->
        <!--        tools:visibility="visible" />-->
        <!--    </com.google.android.material.textfield.TextInputLayout>-->




        <EditText
            android:id="@+id/editTextText"
            android:layout_width="328dp"
            android:layout_height="7dp"
            android:ems="10"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/phoneno"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:hint="@string/phone_no"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/area"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/beatarea1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/beat_area"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registerbutton"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add" />


    </LinearLayout>

</ScrollView>